tests/fixtures/errors/match_nonsum_subject.z
# E0100: a match dissects a union/variant or generic parameter. A numeric
# (or string/class/record) subject has no arms to match -- a type error,
# not invalid C. This also covers the old `match (u32) case ok` bad-C bug.
main: function is {
    n: 5.u32
    match (n) case ok then print "a" case err then print "b"
}
